# ccsync

./: .gitignore  CLAUDE.md  CLAUDE.rust.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  devenv.nix
.github/workflows/: claude-code-review.yml  release-binaries.yml  release-plz.yml  security-audit.yml  test.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
crates/ccsync/: CHANGELOG.md  Cargo.toml
crates/ccsync-cli/: Cargo.toml
crates/ccsync-cli/src/: cli.rs  interactive.rs  main.rs
crates/ccsync-cli/src/commands/: common.rs  config.rs  mod.rs  status.rs  to_global.rs  to_local.rs
crates/ccsync-cli/tests/: cli_tests.rs
crates/ccsync-core/: CHANGELOG.md  Cargo.toml
crates/ccsync-core/src/: comparison.rs  scanner.rs  sync.rs
crates/ccsync-core/src/comparison/: diff.rs  directory.rs  hash.rs  timestamp.rs
crates/ccsync-core/src/config/: discovery.rs  integration_tests.rs  merge.rs  patterns.rs
crates/ccsync-core/src/scanner/: agents.rs  commands.rs  integration_tests.rs  skills.rs  symlinks.rs
crates/ccsync-core/src/sync/: actions.rs  executor.rs  orchestrator.rs  reporting.rs
crates/ccsync/src/: cli.rs  comparison.rs  config.rs  interactive.rs  lib.rs  main.rs  scanner.rs  sync.rs
crates/ccsync/src/commands/: common.rs  diff.rs  mod.rs
crates/ccsync/src/comparison/: diff.rs  hash.rs  integration_tests.rs  timestamp.rs
crates/ccsync/src/config/: discovery.rs  integration_tests.rs  merge.rs  patterns.rs  types.rs  validation.rs
crates/ccsync/src/scanner/: agents.rs  commands.rs  filters.rs  integration_tests.rs  skills.rs  symlinks.rs
crates/ccsync/src/sync/: actions.rs  executor.rs  orchestrator.rs  reporting.rs
crates/ccsync/tests/: cli_tests.rs  scanner_integration.rs
docs/plans/: 2025-11-22-whole-directory-skill-sync-design.md
examples/: .ccsync.toml  .ccsync.yaml
src/: cli.rs  errors.rs  main.rs  platform.rs
src/commands/: config.rs  diff.rs  mod.rs  status.rs  to_global.rs  to_local.rs
src/models/: config.rs  config_loader.rs  file_diff.rs  file_metadata.rs  mod.rs  pattern_matcher.rs
src/services/: mod.rs  scanner.rs
