[workspace]
members = [
    "crates/ccsync",
    "crates/ccsync-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["ccsync contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/ccsync"

[workspace.dependencies]
# Core dependencies with tilde requirements for patch compatibility
clap = { version = "~4.5.28", features = ["derive", "cargo"] }
anyhow = "~1.0.95"

# Dev dependencies
assert_cmd = "~2.0.17"
predicates = "~3.1.3"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"
unused_mut = "warn"
dead_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
