[workspace]
members = [
    "crates/ccsync-core",
    "crates/ccsync",
]
resolver = "2"

[workspace.package]
version = "0.1.5"
edition = "2024"
authors = ["ccsync contributors"]
license = "MIT"
repository = "https://github.com/onsails/ccsync"

[workspace.dependencies]
# Core dependencies with tilde requirements for patch compatibility
clap = { version = "~4.5.51", features = ["derive", "cargo"] }
anyhow = "~1.0.95"
dialoguer = "~0.12.0"
ctrlc = "~3.5.1"

# Dev dependencies
assert_cmd = "~2.1.1"
predicates = "~3.1.3"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"
unused_mut = "warn"
dead_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
