[workspace]
members = [
    "crates/ccsync-core",
    "crates/ccsync",
]
resolver = "2"

[workspace.package]
version = "0.1.8"
edition = "2024"
authors = ["ccsync contributors"]
license = "MIT"
repository = "https://github.com/onsails/ccsync"

[workspace.dependencies]
# Core dependencies
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
dialoguer = "0.12"
ctrlc = "3.5"

# Dev dependencies
assert_cmd = "2.1"
predicates = "3.1"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"
unused_mut = "warn"
dead_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
