[package]
name = "ccsync-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Claude Configuration Synchronization"
keywords = ["sync", "configuration", "claude"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow.workspace = true
walkdir = "~2.5.0"
dunce = "~1.0.5"
sha2 = "~0.10.9"
similar = "~2.7.0"
serde = { version = "~1.0.228", features = ["derive"] }
toml = "~0.9.8"
dirs = "~6.0.0"
ignore = "~0.4.25"

[dev-dependencies]
tempfile = "~3.23.0"
serde_json = "~1.0.140"

[lints]
workspace = true
