[package]
name = "ccsync-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Claude Configuration Synchronization"
keywords = ["sync", "configuration", "claude"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow.workspace = true
walkdir = "2.5"
dunce = "1.0"
sha2 = "0.10"
similar = "2.7"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
dirs = "6.0"
ignore = "0.4"

[dev-dependencies]
tempfile = "3.23"
serde_json = "1.0"

[lints]
workspace = true
