[package]
name = "ccsync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Claude Configuration Synchronization"
keywords = ["sync", "configuration", "claude"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow.workspace = true
walkdir = "~2.5.0"
dirs = "~6.0.0"
dunce = "~1.0.5"

[dev-dependencies]
tempfile = "~3.17.0"

[lints]
workspace = true
