[package]
name = "ccsync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI binary for Claude Configuration Synchronization Tool"
keywords = ["cli", "sync", "configuration", "claude"]
categories = ["command-line-utilities"]

[[bin]]
name = "ccsync"
path = "src/main.rs"

[dependencies]
ccsync-core = { version = "0.1.8", path = "../ccsync-core" }
clap.workspace = true
anyhow.workspace = true
dialoguer.workspace = true
ctrlc.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true

[lints]
workspace = true
